--- a/dockerfiles/Dockerfile.api
+++ b/dockerfiles/Dockerfile.api
@@ -4,5 +4,8 @@ WORKDIR /tmp
 COPY requirements/requirements.api.txt .
 RUN pip install --no-cache-dir -r requirements.api.txt
 
-COPY src/job /opt/app
-WORKDIR /opt/app
+COPY src/api /opt/api
+WORKDIR /opt/api
+
+EXPOSE 80
+CMD ["uvicorn", "api.main:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "80"]
